Result divs are no longer collapsed using bootstrap spoilers

--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ input:disabled+label {
     color:#ccc;
 }
 
+textarea {
+    background-color: lightgray;
+}
+
 .group{
     margin: 5px;
     padding: 3px;
@@ -37,8 +41,10 @@ input:disabled+label {
 }
 
 .spoilerLink {
-    color: black !important;
-    text-decoration: none !important;
+    color: black;
+    text-decoration: none;
+    margin-bottom: 0px;
+    padding-bottom: 10px;
 }
 
 .spoilerLink:hover {
@@ -150,13 +156,15 @@ input:disabled+label {
     transition: none;
 }
 
-#error {
-    border: solid red 1px;
+
+.error {
+    border: solid brown 1px;
     margin: 10px;
     padding: 5px;
-    color: brown;
+    color: black;
+    background-color: #ffd7cf
 }
 
-#error p {
+.error p {
     font-family: monospace;
 }
